...
    <Button
        android:id="@+id/clearButtonView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/tabs_tray_action_erase"
        android:textColor="@color/colorTextActive"
        android:background="?android:attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
