...
                    android:layout_marginEnd="5dp"
                    android:padding="0dp"
                    android:spinnerMode="dropdown"
                    android:background="@android:color/transparent"/>

                <com.xlab.vbrowser.widget.InlineAutocompleteEditText
                    android:id="@+id/urlView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/urlbar_hint"
                    android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
...
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                    <TextView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_search_white"
                        android:gravity="center_vertical"
                        android:padding="16dp"
...
