<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:orientation="horizontal"
    android:paddingStart="4dp"
    android:paddingEnd="0dp">

    <ImageButton
        android:id="@+id/customtab_close"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:contentDescription="@string/content_description_customtab_exit"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/earthView"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_earth"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ImageButton
        android:id="@+id/bookmarkView"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:src="@drawable/ic_bookmark"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/content_description_bookmark" />

    <ImageView
        android:id="@+id/lock"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_lock"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/content_description_lock" />

    <!-- lint: We need to use singleLine=true for the fading edge to work (which is officially deprecated,
         but still needed), hence we ignore deprecated warnings here.. -->
    <TextView
        android:hint="@string/urlbar_hint"
        android:textColorHint="@color/colorTextInactive"
        tools:ignore="Deprecated"
        android:id="@+id/display_url"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:ellipsize="none"
        android:requiresFadingEdge="horizontal"
        android:gravity="center_vertical"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorTextActive"
        android:textSize="15sp"
        android:drawablePadding="4dp" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:contentDescription="@string/content_description_reload"
        android:src="@drawable/ic_refresh"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:contentDescription="@string/content_description_stop"
        android:src="@drawable/ic_stop" />

    <ImageButton
        android:id="@+id/downloadMedia"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:contentDescription="@string/content_description_downloadmedia"
        android:src="@drawable/ic_download"
        android:enabled="false"/>

    <!-- The contentDescription is supplied by other applications in the Custom Tab Intent, and
         is therefore set programatically. -->
    <ImageButton
        tools:ignore="contentDescription"
        android:id="@+id/customtab_actionbutton"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:maxWidth="@dimen/customtabs_toolbar_icon_size"
        android:maxHeight="@dimen/customtabs_toolbar_icon_size"
        android:scaleType="centerInside"
        android:visibility="gone"
        tools:visibility="visible"
        tools:src="@drawable/ic_delete"
        android:layout_gravity="center_vertical"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp">

        <ImageButton
            android:id="@+id/menuView"
            android:layout_width="36dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_menu"
            android:src="@drawable/ic_menu" />

        <!-- Block icon to indicate blocking has been turned off -->
        <FrameLayout
            android:id="@+id/block"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="top|end|center"
            android:layout_marginEnd="4dp"
            android:background="@drawable/purple_badge_background"
            android:visibility="gone">

            <ImageView
                android:id="@+id/block_image"
                android:layout_width="12dp"
                android:layout_height="13.33dp"
                android:layout_gravity="center"
                android:tint="@color/colorLightTextActive" />
        </FrameLayout>

        <!-- Block icon to indicate number of ads and tracker blocked -->
        <TextSwitcher
            android:id="@+id/adblocked"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="top|end|center"
            android:gravity="center"
            android:visibility="visible"
            android:background="@drawable/magenta_badge_background">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorLightTextActive"
                android:lines="1"
                android:textSize="14dp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                />

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorLightTextActive"
                android:lines="1"
                android:textSize="14dp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                />
        </TextSwitcher>

    </FrameLayout>

</LinearLayout>
