...
            android:maxLines="2"
            android:text="@string/menu_trackers_blocked_title"
            android:textColor="?attr/activeTextColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/trackers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/activeTextColor"
            android:textSize="24sp"
            tools:text="0" />

    </LinearLayout>

    <Switch
        android:id="@+id/blocking_switch"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical|end"
        android:background="?android:attr/selectableItemBackground"
        android:checked="true"
        android:clickable="true"
...
